@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/timezone-data-2011c.ebuild,v 1.1 2011/03/09 20:14:40 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/timezone-data-2011d.ebuild,v 1.2 2011/03/22 17:04:01 vapier Exp $
 
 inherit eutils toolchain-funcs flag-o-matic
 
